feat: add `RunWith` annotation to test class